force-app/main/default/objects/Precalificacion__c/Precalificacion__c.object-meta.xml
<CustomObject>
    <label>Precalificación</label>
    <nameField>
        <label>Nombre de Precalificación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Precalificaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>