force-app/main/default/objects/Precalificacion__c/fields/Activo_Circulante__c.field-meta.xml
<CustomField>
    <fullName>Activo_Circulante__c</fullName>
    <label>Activo Circulante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>