force-app/main/default/objects/Precalificacion__c/fields/Activo_Fijo_Neto__c.field-meta.xml
<CustomField>
    <fullName>Activo_Fijo_Neto__c</fullName>
    <label>Activo Fijo (Neto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>