force-app/main/default/objects/Precalificacion__c/fields/Activo_total__c.field-meta.xml
<CustomField>
    <fullName>Activo_total__c</fullName>
    <label>Activo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>