force-app/main/default/objects/Precalificacion__c/fields/Activos_Fijos_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Activos_Fijos_Ventas__c</fullName>
    <description>(Activo Fijo Neto / Ventas Netas) × 100</description>
    <formula>(Activo_Fijo_Neto__c / Ventas_Netas__c)*100</formula>
    <label>Activos Fijos / Ventas (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>