force-app/main/default/objects/Precalificacion__c/fields/Apalancamiento__c.field-meta.xml
<CustomField>
    <fullName>Apalancamiento__c</fullName>
    <description>Pasivo Total / Capital Contable</description>
    <formula>Pasivo_Total__c / Capital_Contable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apalancamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>