force-app/main/default/objects/Precalificacion__c/fields/Aserta_AF_Ventas_Eval__c.field-meta.xml
<CustomField>
    <fullName>Aserta_AF_Ventas_Eval__c</fullName>
    <formula>IF(Activos_Fijos_Ventas__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASERTA - A.Fijos/Ventas Resultado</label>
    <type>Text</type>
</CustomField>