force-app/main/default/objects/Precalificacion__c/fields/Aserta_Apalancamiento_Eval__c.field-meta.xml
<CustomField>
    <fullName>Aserta_Apalancamiento_Eval__c</fullName>
    <formula>IF(Apalancamiento__c &gt;= 0 &amp;&amp; Apalancamiento__c &lt;= 2, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASERTA - Apalancamiento Resultado</label>
    <type>Text</type>
</CustomField>