force-app/main/default/objects/Precalificacion__c/fields/Aserta_CapTrabajo_Eval__c.field-meta.xml
<CustomField>
    <fullName>Aserta_CapTrabajo_Eval__c</fullName>
    <formula>IF(Capital_de_Trabajo__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>ASERTA - Capital Trabajo Resultado</label>
    <type>Text</type>
</CustomField>