force-app/main/default/objects/Precalificacion__c/fields/Aserta_Liquidez_Eval__c.field-meta.xml
<CustomField>
    <fullName>Aserta_Liquidez_Eval__c</fullName>
    <formula>IF(Liquidez__c &gt;= 1, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASERTA - Liquidez Resultado</label>
    <type>Text</type>
</CustomField>