force-app/main/default/objects/Precalificacion__c/fields/Aserta_PrAcido_Eval__c.field-meta.xml
<CustomField>
    <fullName>Aserta_PrAcido_Eval__c</fullName>
    <formula>IF(Prueba_del_Acido__c &gt;= 0.85, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASERTA - Prueba del Ácido Resultado</label>
    <type>Text</type>
</CustomField>