force-app/main/default/objects/Precalificacion__c/fields/Capacidad_Afianzamiento__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Afianzamiento__c</fullName>
    <label>Capacidad de Afianzamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>