force-app/main/default/objects/Precalificacion__c/fields/Capacidad_Afianzamiento_Calc__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Afianzamiento_Calc__c</fullName>
    <description>Capacidad Suficiente o Sin Capacidad segun resultado de afianzamiento</description>
    <formula>IF(Resultado_Afianzamiento_Calc__c &gt; 0, &quot;Capacidad Suficiente&quot;, &quot;Sin Capacidad&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad Afianzamiento Calc</label>
    <type>Text</type>
</CustomField>