force-app/main/default/objects/Precalificacion__c/fields/Capacidad_de_Afianzamiento__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_Afianzamiento__c</fullName>
    <label>Capacidad de Afianzamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacidad Suficiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>