force-app/main/default/objects/Precalificacion__c/fields/Capital_Contable__c.field-meta.xml
<CustomField>
    <fullName>Capital_Contable__c</fullName>
    <label>Capital Contable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>