force-app/main/default/objects/Precalificacion__c/fields/Capital_de_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Capital_de_Trabajo__c</fullName>
    <description>Activo Circulante - Pasivo a Corto Plazo</description>
    <formula>Activo_Circulante__c - Pasivo_Corto_Plazo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital de Trabajo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>