force-app/main/default/objects/Precalificacion__c/fields/Chubb_AF_Ventas_Eval__c.field-meta.xml
<CustomField>
    <fullName>Chubb_AF_Ventas_Eval__c</fullName>
    <formula>IF(Activos_Fijos_Ventas__c &gt;=0.08, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>CHUBB - A.Fijos/Ventas Resultado</label>
    <type>Text</type>
</CustomField>