force-app/main/default/objects/Precalificacion__c/fields/Chubb_Apalancamiento_Eval__c.field-meta.xml
<CustomField>
    <fullName>Chubb_Apalancamiento_Eval__c</fullName>
    <formula>IF(AND(Pasivo_Total__c / Capital_Contable__c &gt;= 0, Pasivo_Total__c / Capital_Contable__c &lt;= 4), &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>CHUBB - Apalancamiento Resultado</label>
    <type>Text</type>
</CustomField>