force-app/main/default/objects/Precalificacion__c/fields/Chubb_Liquidez_Eval__c.field-meta.xml
<CustomField>
    <fullName>Chubb_Liquidez_Eval__c</fullName>
    <formula>IF(Activo_Circulante__c / Pasivo_Corto_Plazo__c &gt;= 0.85, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>CHUBB - Liquidez Resultado</label>
    <type>Text</type>
</CustomField>