force-app/main/default/objects/Precalificacion__c/fields/Chubb_PrAcido_Eval__c.field-meta.xml
<CustomField>
    <fullName>Chubb_PrAcido_Eval__c</fullName>
    <formula>IF((Activo_Circulante__c - Inventarios__c) / Pasivo_Corto_Plazo__c &gt;= 0.35, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>CHUBB - Prueba del Ácido Resultado</label>
    <type>Text</type>
</CustomField>