force-app/main/default/objects/Precalificacion__c/fields/Chubb_Utilidad_Eval__c.field-meta.xml
<CustomField>
    <fullName>Chubb_Utilidad_Eval__c</fullName>
    <formula>IF(Utilidad_del_Ejercicio__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>CHUBB - Utilidad Operación Resultado</label>
    <type>Text</type>
</CustomField>