force-app/main/default/objects/Precalificacion__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>El contratista  no cuenta con capacidad suficiente</fullName>
            </value>
            <value>
                <fullName>El contratista cuenta con capacidad de Afianzamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>