force-app/main/default/objects/Precalificacion__c/fields/Contratista__c.field-meta.xml
<CustomField>
    <fullName>Contratista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Precalificaciones</relationshipLabel>
    <relationshipName>Precalificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>