force-app/main/default/objects/Precalificacion__c/fields/ContratistaPrecalificacion__c.field-meta.xml
<CustomField>
    <fullName>ContratistaPrecalificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista de Precalificación</label>
    <referenceTo>Contratista__c</referenceTo>
    <relationshipLabel>Precalificaciones</relationshipLabel>
    <relationshipName>Precalificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>