force-app/main/default/objects/Precalificacion__c/fields/Datos_de_Presupuesto_Base__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Presupuesto_Base__c</fullName>
    <label>Datos de Presupuesto Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>