force-app/main/default/objects/Precalificacion__c/fields/Estado_autom_tico__c.field-meta.xml
<CustomField>
    <fullName>Estado_autom_tico__c</fullName>
    <label>Estado automático</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Reprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>