force-app/main/default/objects/Precalificacion__c/fields/Fecha_Estados_Financieros__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estados_Financieros__c</fullName>
    <label>Fecha de Estados Financieros</label>
    <type>Date</type>
</CustomField>