force-app/main/default/objects/Precalificacion__c/fields/Fianza_Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Fianza_Anticipo__c</fullName>
    <description>Importe Contrato × % Anticipo</description>
    <formula>Importe_Total_Contrato__c * Porcentaje_Anticipo__c</formula>
    <label>Fianza de Anticipo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>