force-app/main/default/objects/Precalificacion__c/fields/Fianza_Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Fianza_Cumplimiento__c</fullName>
    <description>Importe Contrato × % Cumplimiento</description>
    <formula>Importe_Total_Contrato__c * Porcentaje_Cumplimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fianza de Cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>