force-app/main/default/objects/Precalificacion__c/fields/Fianza_Pasivos_Cont__c.field-meta.xml
<CustomField>
    <fullName>Fianza_Pasivos_Cont__c</fullName>
    <description>Importe Contrato × % Pasivos Contingentes</description>
    <formula>Importe_Total_Contrato__c * Porcentaje_Pasivos_Cont__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fianza Pasivos Contingentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>