force-app/main/default/objects/Precalificacion__c/fields/Importe_Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Anticipo__c</fullName>
    <formula>Importe_Total_Contrato__c * Porcentaje_Anticipo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Anticipo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>