force-app/main/default/objects/Precalificacion__c/fields/Importe_Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Importe_Cumplimiento__c</fullName>
    <formula>Importe_Total_Contrato__c *  Porcentaje_Cumplimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Cumplimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>