force-app/main/default/objects/Precalificacion__c/fields/Importe_Pasivos_Contingentes__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pasivos_Contingentes__c</fullName>
    <formula>Importe_Total_Contrato__c * Porcentaje_Pasivos_Cont__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Pasivos Contingentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>