force-app/main/default/objects/Precalificacion__c/fields/Importe_Total_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Importe_Total_Contrato__c</fullName>
    <label>Importe Total del Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>