force-app/main/default/objects/Precalificacion__c/fields/Inventarios__c.field-meta.xml
<CustomField>
    <fullName>Inventarios__c</fullName>
    <label>Inventarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>