force-app/main/default/objects/Precalificacion__c/fields/L_nea_de_Afianzamiento_Estimada__c.field-meta.xml
<CustomField>
    <fullName>L_nea_de_Afianzamiento_Estimada__c</fullName>
    <label>Línea de Afianzamiento Estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>