force-app/main/default/objects/Precalificacion__c/fields/Linea_Afianzamiento_Calc__c.field-meta.xml
<CustomField>
    <fullName>Linea_Afianzamiento_Calc__c</fullName>
    <description>Capital Contable x 2</description>
    <formula>Capital_Contable__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linea Afianzamiento Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>