force-app/main/default/objects/Precalificacion__c/fields/Linea_Aserta__c.field-meta.xml
<CustomField>
    <fullName>Linea_Aserta__c</fullName>
    <formula>IF(AND(Aserta_Liquidez_Eval__c=&quot;POSITIVO&quot;, Aserta_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Aserta_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Aserta_PrAcido_Eval__c=&quot;POSITIVO&quot;, Aserta_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), Capital_Contable__c * 2, 0)</formula>
    <label>Línea ASERTA (Monto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>