force-app/main/default/objects/Precalificacion__c/fields/Linea_Chubb__c.field-meta.xml
<CustomField>
    <fullName>Linea_Chubb__c</fullName>
    <formula>IF(AND(Chubb_Liquidez_Eval__c=&quot;POSITIVO&quot;, Chubb_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Chubb_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Chubb_Utilidad_Eval__c=&quot;POSITIVO&quot;, Chubb_PrAcido_Eval__c=&quot;POSITIVO&quot;, Chubb_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), Ventas_Netas__c * 0.6, 0)</formula>
    <label>Línea CHUBB (Monto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>