force-app/main/default/objects/Precalificacion__c/fields/Linea_Chubb_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Linea_Chubb_Resultado__c</fullName>
    <formula>IF(AND(Chubb_Liquidez_Eval__c=&quot;POSITIVO&quot;, Chubb_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Chubb_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Chubb_Utilidad_Eval__c=&quot;POSITIVO&quot;, Chubb_PrAcido_Eval__c=&quot;POSITIVO&quot;, Chubb_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), &quot;CUMPLE&quot;, &quot;NO CUMPLE CON LOS CRITERIOS PARA ASIGNACION DE LINEA&quot;)</formula>
    <label>Línea CHUBB (Resultado)</label>
    <type>Text</type>
</CustomField>