force-app/main/default/objects/Precalificacion__c/fields/Linea_Insurgentes_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Linea_Insurgentes_Resultado__c</fullName>
    <formula>IF(AND(Aserta_Liquidez_Eval__c=&quot;POSITIVO&quot;, Aserta_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Aserta_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Aserta_PrAcido_Eval__c=&quot;POSITIVO&quot;, Aserta_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), &quot;CUMPLE&quot;, &quot;NO CUMPLE CON LOS CRITERIOS PARA ASIGNACION DE LINEA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Línea INSURGENTES (Resultado)</label>
    <type>Text</type>
</CustomField>