force-app/main/default/objects/Precalificacion__c/fields/Linea_Sofimex__c.field-meta.xml
<CustomField>
    <fullName>Linea_Sofimex__c</fullName>
    <formula>IF(AND(Sofimex_Liquidez_Eval__c=&quot;POSITIVO&quot;, Sofimex_Perdidas_Eval__c=&quot;POSITIVO&quot;, Sofimex_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Sofimex_Utilidad_Eval__c=&quot;POSITIVO&quot;, Sofimex_CapTrabajo_Eval__c=&quot;POSITIVO&quot;, Sofimex_ActivoFijo_Eval__c=&quot;POSITIVO&quot;), Capital_Contable__c * 0.7, 0)</formula>
    <label>Línea SOFIMEX (Monto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>