force-app/main/default/objects/Precalificacion__c/fields/Linea_Sofimex_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Linea_Sofimex_Resultado__c</fullName>
    <formula>IF(AND(Sofimex_Liquidez_Eval__c=&quot;POSITIVO&quot;, Sofimex_Perdidas_Eval__c=&quot;POSITIVO&quot;, Sofimex_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Sofimex_Utilidad_Eval__c=&quot;POSITIVO&quot;, Sofimex_CapTrabajo_Eval__c=&quot;POSITIVO&quot;, Sofimex_ActivoFijo_Eval__c=&quot;POSITIVO&quot;), &quot;CUMPLE&quot;, &quot;NO CUMPLE CON LOS CRITERIOS PARA ASIGNACION DE LINEA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Línea SOFIMEX (Resultado)</label>
    <type>Text</type>
</CustomField>