force-app/main/default/objects/Precalificacion__c/fields/Linea_Tokio__c.field-meta.xml
<CustomField>
    <fullName>Linea_Tokio__c</fullName>
    <formula>IF(AND(Tokio_Liquidez_Eval__c=&quot;POSITIVO&quot;, Tokio_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Tokio_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Tokio_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), Capital_Contable__c * 0.4, 0)</formula>
    <label>Línea TOKIO MARINE (Monto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>