force-app/main/default/objects/Precalificacion__c/fields/Linea_Tokio_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Linea_Tokio_Resultado__c</fullName>
    <formula>IF(AND(Tokio_Liquidez_Eval__c=&quot;POSITIVO&quot;, Tokio_Apalancamiento_Eval__c=&quot;POSITIVO&quot;, Tokio_AF_Ventas_Eval__c=&quot;POSITIVO&quot;, Tokio_CapTrabajo_Eval__c=&quot;POSITIVO&quot;), &quot;CUMPLE&quot;, &quot;NO CUMPLE CON LOS CRITERIOS PARA ASIGNACION DE LINEA&quot;)</formula>
    <label>Línea TOKIO MARINE (Resultado)</label>
    <type>Text</type>
</CustomField>