force-app/main/default/objects/Precalificacion__c/fields/Liquidez__c.field-meta.xml
<CustomField>
    <fullName>Liquidez__c</fullName>
    <formula>Activo_Circulante__c / Pasivo_Corto_Plazo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liquidez</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>