force-app/main/default/objects/Precalificacion__c/fields/Motivo_Score__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Score__c</fullName>
    <description>Explicación breve (generada por SDR Agent) del score ICP asignado. Audita la decisión AI.</description>
    <label>Motivo del Score</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>