force-app/main/default/objects/Precalificacion__c/fields/Pasivo_Corto_Plazo__c.field-meta.xml
<CustomField>
    <fullName>Pasivo_Corto_Plazo__c</fullName>
    <label>Pasivo a corto plazo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>