force-app/main/default/objects/Precalificacion__c/fields/Pasivo_Total__c.field-meta.xml
<CustomField>
    <fullName>Pasivo_Total__c</fullName>
    <label>Pasivo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>