force-app/main/default/objects/Precalificacion__c/fields/Porcentaje_Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Anticipo__c</fullName>
    <label>Porcentaje Anticipo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>