force-app/main/default/objects/Precalificacion__c/fields/Porcentaje_Cumplimiento__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Cumplimiento__c</fullName>
    <label>Porcentaje Cumplimiento</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>