force-app/main/default/objects/Precalificacion__c/fields/Porcentaje_Pasivos_Cont__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Pasivos_Cont__c</fullName>
    <label>Porcentaje Pasivos Contingentes</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>