force-app/main/default/objects/Precalificacion__c/fields/Prueba_del_Acido__c.field-meta.xml
<CustomField>
    <fullName>Prueba_del_Acido__c</fullName>
    <description>(Activo Circulante - Inventarios) / Pasivo Corto Plazo</description>
    <formula>(Activo_Circulante__c - Inventarios__c) / Pasivo_Corto_Plazo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prueba del Ácido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>