force-app/main/default/objects/Precalificacion__c/fields/Resultado_afianzamiento__c.field-meta.xml
<CustomField>
    <fullName>Resultado_afianzamiento__c</fullName>
    <label>Resultado afianzamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>