force-app/main/default/objects/Precalificacion__c/fields/Resultado_Afianzamiento_Calc__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Afianzamiento_Calc__c</fullName>
    <description>Linea Afianzamiento Estimada - Total a Afianzar</description>
    <formula>Linea_Afianzamiento_Calc__c - Total_a_Afianzar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resultado Afianzamiento Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>