force-app/main/default/objects/Precalificacion__c/fields/Resultados_anteriores__c.field-meta.xml
<CustomField>
    <fullName>Resultados_anteriores__c</fullName>
    <label>Resultados anteriores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>