force-app/main/default/objects/Precalificacion__c/fields/ROE__c.field-meta.xml
<CustomField>
    <fullName>ROE__c</fullName>
    <description>Utilidad del Ejercicio / Capital Contable</description>
    <formula>IF(Capital_Contable__c = 0, 0, Utilidad_del_Ejercicio__c / Capital_Contable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>