force-app/main/default/objects/Precalificacion__c/fields/Score_ICP__c.field-meta.xml
<CustomField>
    <fullName>Score_ICP__c</fullName>
    <description>Puntuación 0-100 de qué tan bien encaja el prospecto con el Ideal Customer Profile. Calculado por SDR Agent.</description>
    <label>Score ICP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>