force-app/main/default/objects/Precalificacion__c/fields/Sofimex_ActivoFijo_Eval__c.field-meta.xml
<CustomField>
    <fullName>Sofimex_ActivoFijo_Eval__c</fullName>
    <formula>IF(Activo_Fijo_Neto__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOFIMEX - Activo Fijo Resultado</label>
    <type>Text</type>
</CustomField>