force-app/main/default/objects/Precalificacion__c/fields/Sofimex_Apalancamiento_Eval__c.field-meta.xml
<CustomField>
    <fullName>Sofimex_Apalancamiento_Eval__c</fullName>
    <formula>IF(Apalancamiento__c &lt; 0.8, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>SOFIMEX - Apalancamiento Resultado</label>
    <type>Text</type>
</CustomField>