force-app/main/default/objects/Precalificacion__c/fields/Sofimex_Perdidas_Eval__c.field-meta.xml
<CustomField>
    <fullName>Sofimex_Perdidas_Eval__c</fullName>
    <formula>IF(Utilidad_del_Ejercicio__c &lt; 0,
  IF(ABS(Utilidad_del_Ejercicio__c) &lt;= Capital_Contable__c / 3,
    &quot;Pérdida Aceptable&quot;,
    &quot;Pérdida Significativa&quot;),
  &quot;POSITIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOFIMEX - Pérdidas Patrimonio Resultado</label>
    <type>Text</type>
</CustomField>