force-app/main/default/objects/Precalificacion__c/fields/Sofimex_Utilidad_Eval__c.field-meta.xml
<CustomField>
    <fullName>Sofimex_Utilidad_Eval__c</fullName>
    <formula>IF(Activos_Fijos_Ventas__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOFIMEX - Utilidad Operación Resultado</label>
    <type>Text</type>
</CustomField>