force-app/main/default/objects/Precalificacion__c/fields/Tokio_Apalancamiento_Eval__c.field-meta.xml
<CustomField>
    <fullName>Tokio_Apalancamiento_Eval__c</fullName>
    <formula>IF(Apalancamiento__c &gt;= 0 &amp;&amp; Apalancamiento__c  &lt;= 3, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>TOKIO - Apalancamiento Resultado</label>
    <type>Text</type>
</CustomField>