force-app/main/default/objects/Precalificacion__c/fields/Tokio_CapTrabajo_Eval__c.field-meta.xml
<CustomField>
    <fullName>Tokio_CapTrabajo_Eval__c</fullName>
    <formula>IF(Capital_Contable__c &gt;= 0, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOKIO - Capital Trabajo Resultado</label>
    <type>Text</type>
</CustomField>