force-app/main/default/objects/Precalificacion__c/fields/Tokio_Liquidez_Eval__c.field-meta.xml
<CustomField>
    <fullName>Tokio_Liquidez_Eval__c</fullName>
    <formula>IF(Liquidez__c &gt;= 1, &quot;POSITIVO&quot;, &quot;NEGATIVO&quot;)</formula>
    <label>TOKIO - Liquidez Resultado</label>
    <type>Text</type>
</CustomField>