force-app/main/default/objects/Precalificacion__c/fields/Total_a_Afianzar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Afianzar__c</fullName>
    <description>Suma de todas las fianzas requeridas</description>
    <formula>Importe_Anticipo__c +  Importe_Cumplimiento__c+ Importe_Pasivos_Contingentes__c</formula>
    <label>Importe Total por Afianzar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>