force-app/main/default/objects/Precalificacion__c/fields/Utilidad_del_Ejercicio__c.field-meta.xml
<CustomField>
    <fullName>Utilidad_del_Ejercicio__c</fullName>
    <label>Utilidad del Ejercicio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>