force-app/main/default/objects/Precalificacion__c/fields/Utilidad_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Utilidad_Operacion__c</fullName>
    <description>Igual a Utilidad del Ejercicio</description>
    <formula>Utilidad_del_Ejercicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilidad de Operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>