force-app/main/default/objects/Precalificacion__c/fields/Utilidades_Retenidas__c.field-meta.xml
<CustomField>
    <fullName>Utilidades_Retenidas__c</fullName>
    <label>Utilidades Retenidas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>