force-app/main/default/objects/Precalificacion__c/fields/Ventas_Netas__c.field-meta.xml
<CustomField>
    <fullName>Ventas_Netas__c</fullName>
    <label>Ventas Netas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>